new content for pl

--- a/index.html
+++ b/index.html
@@ -115,11 +115,20 @@
         </div>
         <div class="col-12 col-lg-5 mb-10 mb-lg-0">
           <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
-            Process-<br />management <br /> @ ITU Consult GmbH.
+            Project Lead <br /> @ ITU Consult GmbH.
           </h1>
+          <p class="lead mb-10 paraAnimSmall">since 09.2024</p>
           <p class="lead mb-10 paraAnimSmall">
-            I am working full-time at the ITU Consult GmbH in the Projectmanagment.
-            My job is to organize and manage the team as well as helping with all kinds of paperwork during each phase
+            I am working full-time at the ITU Consult GmbH in the Projects of Krypto Applications from VW.
+            My job is to manage the project in all its different phases and parts with various techniques and methods.
+          </p>
+          <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
+            Process-<br />management & Teamlead <br /> @ ITU Consult GmbH.
+          </h1>
+          <p class="lead mb-10 paraAnimSmall">01.2024 - 09.2024</p>
+          <p class="lead mb-10 paraAnimSmall">
+            I was working at the ITU Consult GmbH in the Project of SFD from VW.
+            My job was to organize and manage the team as well as helping with all kinds of paperwork during each phase
             of the project.
           </p>
           <a href="https://ituc.de/">
@@ -129,6 +138,7 @@
           <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
             Student at CAU<br />Business Informatics.
           </h1>
+          <p class="lead mb-10 paraAnimSmall">08.2019 - 08.2023</p>
           <p class="lead mb-10 paraAnimSmall">
             In my time at CAU Kiel, I learned about a lot of interesting topics from the whole spectrum of informatics,
             business, economy, law and IT Security.
@@ -141,6 +151,7 @@
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">
             Graduation<br />Gymnasium.
           </h1>
+          <p class="lead mb-10 paraAnimSmall">08.2015 - 08.2019</p>
           <p class="lead mb-10 paraAnimSmall">
             I graduated from the gymnasium in 2019 with priorities in
             informatics as well as mathematics and physics at the Phillip Melanchton
@@ -151,6 +162,7 @@
               class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           </a>
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">America.</h1>
+          <p class="lead mb-10 paraAnimSmall">08.2011 - 08.2015</p>
           <p class="lead mb-10 paraAnimSmall">
             From 2012 - 2015 I have been living in the United Staates of
             America improving my English and furthermore getting to know the
@@ -166,6 +178,7 @@
               class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           </a>
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">Elementry School.</h1>
+          <p class="lead mb-10 paraAnimSmall">08.2008 - 08.2011</p>
           <p class="lead mb-10 paraAnimSmall">
             My educational career started in 2008 at the Grundschule am Zellberg in Meine Germany.
             There I was able to construct the foundations for all my steps ahead.
