some text adaptions

--- a/index.html
+++ b/index.html
@@ -114,57 +114,62 @@
             class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
         </div>
         <div class="col-12 col-lg-5 mb-10 mb-lg-0">
-          <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
+          <h1 class="ls-tight font-bolder display-3 my-5 headerAnim">
             Project Lead <br /> @ ITU Consult GmbH.
           </h1>
           <p class="lead mb-10 paraAnimSmall">since 09.2024</p>
           <p class="lead mb-10 paraAnimSmall">
-            I am working full-time at the ITU Consult GmbH in the Projects of Krypto Applications from VW.
-            My job is to manage the project in all its different phases and parts with various techniques and methods.
+            At present, I'm engaged in full-time employment with ITU Consult GmbH, specifically 
+            on the Krypto Project for Volkswagen. 
+            My role encompasses managing and supervising the project and all 
+            its teams. As such, I bear responsibility for the project's 
+            overall management, ensuring the smooth execution of various aspects throughout the entire project process.
+            by managing the variuos aspects during the whole process of the project.
           </p>
-          <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
-            Process-<br />management & Teamlead <br /> @ ITU Consult GmbH.
+          <h1 class="ls-tight font-bolder display-3 my-5 headerAnim">
+            Process-<br />management & Team Lead <br /> @ ITU Consult GmbH.
           </h1>
           <p class="lead mb-10 paraAnimSmall">01.2024 - 09.2024</p>
           <p class="lead mb-10 paraAnimSmall">
-            I was working at the ITU Consult GmbH in the Project of SFD from VW.
-            My job was to organize and manage the team as well as helping with all kinds of paperwork during each phase
-            of the project.
+            My first project at ITU Consult GmbH was the SFD project for Volkswagen. 
+            My role as Processmanager and Team Lead involved overseeing and coordinating the support team, 
+            as well as analyzing and improving SFD processes.
           </p>
           <a href="https://ituc.de/">
             <img src="/img/index/itucLogo.png"
               class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           </a>
-          <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
+          <h1 class="ls-tight font-bolder display-3 my-5 headerAnim">
             Student at CAU<br />Business Informatics.
           </h1>
           <p class="lead mb-10 paraAnimSmall">08.2019 - 08.2023</p>
           <p class="lead mb-10 paraAnimSmall">
-            In my time at CAU Kiel, I learned about a lot of interesting topics from the whole spectrum of informatics,
-            business, economy, law and IT Security.
-            I specialized in IT-Project management and graduated with a bachelor's degree in the topic of
+            During my tenure at CAU Kiel, I was exposed to a wide array of fascinating subjects across the fields of 
+            informatics, business, economics, law, and IT Security. 
+            I chose to specialize in IT-Project Management, culminating in my 
+            attainment of a bachelor's degree, the focus of which was likewise IT-Project Management.
             <a href="/html/pages/ProcessDokuBa_project.html">"Augmented Reality in Logistic Processes"</a>.<br />
           </p>
           <a href="https://www.uni-kiel.de/">
             <img src="/img/index/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           </a>
-          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">
+          <h1 class="ls-tight font-bolder display-3 my-5 pt-5 headerAnim">
             Graduation<br />Gymnasium.
           </h1>
           <p class="lead mb-10 paraAnimSmall">08.2015 - 08.2019</p>
           <p class="lead mb-10 paraAnimSmall">
             I graduated from the gymnasium in 2019 with priorities in
-            informatics as well as mathematics and physics at the Phillip Melanchton
+            informatics as well as mathematics and physics at the Philipp Melanchthon
             Gymnasium Meine.
           </p>
           <a href="https://pmg-meine.de/">
             <img src="/img/index/gymnasium_pmg.png"
               class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           </a>
-          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">America.</h1>
+          <h1 class="ls-tight font-bolder display-3 my-5 pt-5 headerAnim">America.</h1>
           <p class="lead mb-10 paraAnimSmall">08.2011 - 08.2015</p>
           <p class="lead mb-10 paraAnimSmall">
-            From 2012 - 2015 I have been living in the United Staates of
+            From 2011 - 2015 I have been living in the United Staates of
             America improving my English and furthermore getting to know the
             American culture.
           </p>
@@ -177,7 +182,7 @@
             <img src="/img/index/gymnasium_gis.png"
               class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           </a>
-          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">Elementry School.</h1>
+          <h1 class="ls-tight font-bolder display-3 my-5 pt-5 headerAnim">Elementry School.</h1>
           <p class="lead mb-10 paraAnimSmall">08.2008 - 08.2011</p>
           <p class="lead mb-10 paraAnimSmall">
             My educational career started in 2008 at the Grundschule am Zellberg in Meine Germany.
@@ -187,13 +192,6 @@
             <img src="/img/index/elementary_zellberg.png"
               class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           </a>
-          <h1 class="ls-tight font-bolder display-3 pt-5 headerAnim">Certificates.</h1>
-          <h1 class="ls-tight display-6 mb-5 pt-5 headerAnim">Completed</h1>
-          <div class="card_cert text-white paraAnimSmall">
-            <h5 class="card-body"> Moderations- und Präsentationstechniken </h5>
-          </div>
-          <h1 class="ls-tight display-6 mb-5 pt-5 headerAnim">In Progress</h1>
-
         </div>
 
         <div class="col-12 col-lg-6 ms-lg-auto paraAnimSmall">
@@ -281,6 +279,12 @@
                 aria-valuemax="100"></div>
             </div>
           </div>
+          <h1 class="ls-tight font-bolder display-3 pt-5 headerAnim">Certificates.</h1>
+          <h1 class="ls-tight display-6 mb-5 pt-5 headerAnim">Completed</h1>
+          <div class="card_cert text-white paraAnimSmall">
+            <h5 class="card-body"> Moderations- und Präsentationstechniken </h5>
+          </div>
+          <h1 class="ls-tight display-6 mb-5 pt-5 headerAnim">In Progress</h1>
         </div>
 
       </div>
