some minor adaptions

--- a/index.html
+++ b/index.html
@@ -120,27 +120,27 @@
           <p class="lead mb-10 paraAnimSmall">since 09.2024</p>
           <p class="lead mb-10 paraAnimSmall">
             At present, I'm engaged in full-time employment with ITU Consult GmbH, specifically 
-            on the Krypto Project for Volkswagen. 
+            on the KryptoClassic Project for Volkswagen. 
             My role encompasses managing and supervising the project and all 
             its teams. As such, I bear responsibility for the project's 
             overall management, ensuring the smooth execution of various aspects throughout the entire project process.
             by managing the variuos aspects during the whole process of the project.
           </p>
           <h1 class="ls-tight font-bolder display-3 my-5 headerAnim">
-            Process-<br />management & Team Lead <br /> @ ITU Consult GmbH.
+            Project Management<br />Officer<br /> @ ITU Consult GmbH.
           </h1>
           <p class="lead mb-10 paraAnimSmall">01.2024 - 09.2024</p>
           <p class="lead mb-10 paraAnimSmall">
             My first project at ITU Consult GmbH was the SFD project for Volkswagen. 
-            My role as Processmanager and Team Lead involved overseeing and coordinating the support team, 
-            as well as analyzing and improving SFD processes.
+            I started of as Project Management Officer supporting the Project Lead at varius topics.
+            Further on I also supported the Support-Team of the project as team lead.
           </p>
           <a href="https://ituc.de/">
             <img src="/img/index/itucLogo.png"
               class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           </a>
           <h1 class="ls-tight font-bolder display-3 my-5 headerAnim">
-            Student at CAU<br />Business Informatics.
+            Student @ CAU<br />Business Informatics.
           </h1>
           <p class="lead mb-10 paraAnimSmall">08.2019 - 08.2023</p>
           <p class="lead mb-10 paraAnimSmall">
@@ -156,7 +156,7 @@
           <h1 class="ls-tight font-bolder display-3 my-5 pt-5 headerAnim">
             Graduation<br />Gymnasium.
           </h1>
-          <p class="lead mb-10 paraAnimSmall">08.2015 - 08.2019</p>
+          <p class="lead mb-10 paraAnimSmall">08.2011 - 08.2012 & <br> 08.2015 - 08-2019</p>
           <p class="lead mb-10 paraAnimSmall">
             I graduated from the gymnasium in 2019 with priorities in
             informatics as well as mathematics and physics at the Philipp Melanchthon
@@ -167,16 +167,14 @@
               class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           </a>
           <h1 class="ls-tight font-bolder display-3 my-5 pt-5 headerAnim">America.</h1>
-          <p class="lead mb-10 paraAnimSmall">08.2011 - 08.2015</p>
+          <p class="lead mb-10 paraAnimSmall">08.2012 - 08.2015</p>
           <p class="lead mb-10 paraAnimSmall">
-            From 2011 - 2015 I have been living in the United Staates of
-            America improving my English and furthermore getting to know the
-            American culture.
+            Between 2011 and 2015, I resided in the United States of America, 
+            enhancing my English skills and becoming familiarized with American culture.
           </p>
           <p class="lead mb-10 paraAnimSmall">
-            There I have been studying at the German School Washington DC
-            which has a focus on teaching in english, but providing the high
-            Standards of German education.
+            At the German School Washington DC is where I pursued my studies, 
+            an institution known for its English-based teaching while maintaining the rigorous standards of German education.
           </p>
           <a href="https://giswashington.org/">
             <img src="/img/index/gymnasium_gis.png"
@@ -186,8 +184,7 @@
           <p class="lead mb-10 paraAnimSmall">08.2008 - 08.2011</p>
           <p class="lead mb-10 paraAnimSmall">
             My educational career started in 2008 at the Grundschule am Zellberg in Meine Germany.
-            There I was able to construct the foundations for all my steps ahead.
-          </p>
+            It was there that I laid the groundwork for all my future academic progress.
           <a href="https://www.grundschule-am-zellberg.de/">
             <img src="/img/index/elementary_zellberg.png"
               class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
